[project]
name = "mistral-hello"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.4.1",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-mistralai>=1.1.1",
    "langchain-text-splitters>=1.1.0",
    "mistralai>=1.11.1",
]
